--- a/_includes/_masthead.html
+++ b/_includes/_masthead.html
@@ -53,9 +53,9 @@
 		<figure class="small-10 columns">
 			<img src="https://eres-sbc-br.github.io/eres2023/images/Banner_principalERES2023.jpg" alt="ERES - 2023">
 		</figure><!-- /.small-10.columns -->
-		<figure class="small-2 columns">
+		<!--<figure class="small-2 columns">
 			<a href="https://www.sbc.org.br" target="_blank"><img src="{{ site.urlimg }}/sbc_realizada.jpg" alt="Realizada pela SBC"></a>
-		</figure><!-- /.small-2.columns -->
+		</figure> /.small-2.columns -->
 		<!-- <div class="small-12 columns"> -->
 			<!--
 			<a id="logo" href="{{ '/' | absolute_url }}" title="{{ site.title }} – {{ site.slogan }}">
