--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -5,10 +5,10 @@
     </figure> -->
 	  <figure class="small-12 large-3 columns"></figure>
     <figure class="small-12 large-3 columns">
-      <a href="https://www.furb.br"><img src="https://www.furb.br/_upl/files/multimidia/furb_universidade%20de%20Blumenau_2%20cores.jpg" alt="Logo da Universidade Regional de Blumenau"></a>
+      <a href="https://www.uem.br"><img src="https://www.furb.br/_upl/files/multimidia/logoUEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
     </figure>
     <figure class="small-12 large-3 columns">
-      <a href="https://www.sc.senai.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/unisenai.png" alt="Logo do Centro Universitário SENAI Santa Catarina (UniSENAI)"></a>
+      <a href="http://www.din.uem.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
     </figure>
 	  <figure class="small-12 large-3 columns"></figure>
     <!-- <figure class="small-12 large-3 columns">
