--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -5,7 +5,7 @@
     </figure> -->
 	  <figure class="small-12 large-3 columns"></figure>
     <figure class="small-12 large-3 columns">
-      <a href="https://www.uem.br"><img src="https://www.furb.br/_upl/files/multimidia/logoUEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
+      <a href="https://www.uem.br"><img src="https://eres-sbc-br.github.io/eres2023/images/logoUEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
     </figure>
     <figure class="small-12 large-3 columns">
       <a href="http://www.din.uem.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
@@ -20,7 +20,7 @@
 	 
   </div>
 
-  <div id="patrocinio-ouro" class="row">
+ <!-- <div id="patrocinio-ouro" class="row">
     <h2> Patrocínio Ouro </h2>
 	  
     <figure class="small-12 large-3 columns">
@@ -52,7 +52,7 @@
 	  </center>
   </div>
 
-  <!--<div id="patrocinio-bronze" class="row">
+  <div id="patrocinio-bronze" class="row">
       <h2> Patrocínio Bronze </h2>
 	 <figure class="small-12 columns">
 		<a href="https://www.softwarebymaringa.com.br/"><img src="{{ site.urlimg }}/sbm-logo.png" alt="Logo da Software by Maringá"></a>
