--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -18,7 +18,7 @@
 	 
   </div>
 
- <!-- <div id="patrocinio-ouro" class="row">
+ <div id="patrocinio-ouro" class="row">
     <h2> Patrocínio Ouro </h2>
 	  
     <figure class="small-12 large-3 columns">
@@ -49,7 +49,7 @@
 	    <figure class="small-12 large-3 columns"></figure>
 	  </center>
   </div>
-
+<!--
   <div id="patrocinio-bronze" class="row">
       <h2> Patrocínio Bronze </h2>
 	 <figure class="small-12 columns">
