--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,5 +1,6 @@
   <div id="realizacao" class="row">
     <h2> Realização </h2>
+	  <figure class="small-12 large-3 columns"></figure>
     <!-- <figure class="small-12 large-3 columns">
       <a href="https://www.sbc.org.br"><img src="{{ site.urlimg }}/sbc.png" alt="Logo da SBC"></a>
     </figure> -->
@@ -15,10 +16,10 @@
     <!-- <figure class="small-12 large-3 columns">
       <a href="https://www.fundacaofritzmuller.com.br"><img src="https://eres-sbc-br.github.io/eres2022/images/ffm.jpg.jpg" alt="Logo da Fundação Fritz Muller"></a>
     </figure> -->
-	 
+	 <figure class="small-12 large-3 columns"></figure>
   </div>
 
- <div id="patrocinio-ouro" class="row">
+ <!-- <div id="patrocinio-ouro" class="row">
     <h2> Patrocínio Ouro </h2>
 	  
     <figure class="small-12 large-3 columns">
@@ -33,7 +34,7 @@
 	  <figure class="small-12 large-3 columns">
 	    	<a href="https://www.ambevtech.com.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/ambev.png" alt="Logo da Ambev Tech"></a>
 	    </figure>
-  </div>
+  </div> -->
 
   <div id="patrocinio-prata" class="row">
     <h2> Patrocínio Prata </h2>
