--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -37,16 +37,12 @@
   </div> -->
 
   <div id="patrocinio-prata" class="row">
-    <h2> Patrocínio Prata </h2>
+    <h2> Patrocínio </h2>
     <center>
 	    <figure class="small-12 large-3 columns"></figure>
-	    <figure class="small-12 large-3 columns">
-      		<a href="https://www.viacredi.coop.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/viacredi.png" alt="Logo da Viacredi"></a>
-    	    </figure>
-	    
-	    <figure class="small-12 large-3 columns">
-	    	<a href="https://www.fundacaofritzmuller.com.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/fundacao.png" alt="Logo da FFM"></a>
-	    </figure>
+	<figure class="small-12 large-3 columns">
+      	<a href="https://www.softwarebymaringa.com.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/maringa.png" alt="Logo da Software by Maringá"></a>
+    	</figure>
 	    <figure class="small-12 large-3 columns"></figure>
 	  </center>
   </div>
@@ -59,17 +55,15 @@
 	  Em prospecção!
   </div>-->
 
-<div id="apoio" class="row">
+<!-- <div id="apoio" class="row">
     <h2> Apoio </h2>
 	<figure class="small-12 large-3 columns"></figure>
     <figure class="small-12 large-3 columns">
       <a href="https://blusoft.org.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/logo-blusoft.png" alt="Logo do Blusoft"></a>
     </figure>
- <figure class="small-12 large-3 columns">
-      <a href="https://www.softwarebymaringa.com.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/maringa.png" alt="Logo da Software by Maringá"></a>
-    </figure>
+ 
 	<figure class="small-12 large-3 columns"></figure>
-  </div>
+  </div>-->
 
 
 
