--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,21 +1,24 @@
   <div id="realizacao" class="row">
     <h2> Realização </h2>
-	  <figure class="small-12 large-3 columns"></figure>
-    <!-- <figure class="small-12 large-3 columns">
-      <a href="https://www.sbc.org.br"><img src="{{ site.urlimg }}/sbc.png" alt="Logo da SBC"></a>
-    </figure> -->
+	<figure class="small-12 large-3 columns"></figure>
     <figure class="small-12 large-3 columns">
       <a href="https://www.uem.br"><img src="https://eres-sbc-br.github.io/eres2023/images/logoUEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
     </figure>
     <figure class="small-12 large-3 columns">
       <a href="http://www.din.uem.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
     </figure>
-    <!-- <figure class="small-12 large-3 columns">
-      <a href="https://www.fapesc.sc.gov.br"><img src="http://www.fapesc.sc.gov.br/wp-content/uploads/2020/02/Logo-FAPESC-fundo-transparente.png" alt="Logo da FAPESC"></a>
-    </figure>-->
-    <!-- <figure class="small-12 large-3 columns">
-      <a href="https://www.fundacaofritzmuller.com.br"><img src="https://eres-sbc-br.github.io/eres2022/images/ffm.jpg.jpg" alt="Logo da Fundação Fritz Muller"></a>
-    </figure> -->
+	 <figure class="small-12 large-3 columns"></figure>
+  </div>
+  
+  <h2> Apoio </h2>
+	  <figure class="small-12 large-3 columns"></figure>
+    <figure class="small-12 large-3 columns">
+      <a href="https://www.fappr.pr.gov.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/fundacao_araucaria.png"></a>
+    </figure>
+    <figure class="small-12 large-3 columns">
+      <a href="https://www.seti.pr.gov.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/seti.png"></a>
+    </figure>
+    
 	 <figure class="small-12 large-3 columns"></figure>
   </div>
 
