--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -10,6 +10,7 @@
 	 <figure class="small-12 large-3 columns"></figure>
   </div>
   
+  <div id="apoio" class="row">
   <h2> Apoio </h2>
 	  <figure class="small-12 large-3 columns"></figure>
     <figure class="small-12 large-3 columns">
