--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -19,8 +19,9 @@
     <figure class="small-12 large-3 columns">
       <a href="https://www.seti.pr.gov.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/seti.png"></a>
     </figure>
-    
-	 <figure class="small-12 large-3 columns"></figure>
+	<figure class="small-12 large-3 columns">
+      <a href="http://www.ctc.uem.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/ctc.png"></a>
+    </figure>
   </div>
 
  <!-- <div id="patrocinio-ouro" class="row">
