--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,10 +2,10 @@
     <h2> Realização </h2>
 	<figure class="small-12 large-3 columns"></figure>
     <figure class="small-12 large-3 columns">
-      <a href="https://www.uem.br"><img src="https://eres-sbc-br.github.io/eres2023/images/logoUEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
+      <a href="https://www.uem.br" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/logoUEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
     </figure>
     <figure class="small-12 large-3 columns">
-      <a href="http://www.din.uem.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
+      <a href="http://www.din.uem.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
     </figure>
 	 <figure class="small-12 large-3 columns"></figure>
   </div>
@@ -14,13 +14,13 @@
   <h2> Apoio </h2>
 	  <figure class="small-12 large-3 columns"></figure>
     <figure class="small-12 large-3 columns">
-      <a href="https://www.fappr.pr.gov.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/fundacao_araucaria.png"></a>
+      <a href="https://www.fappr.pr.gov.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/fundacao_araucaria.png"></a>
     </figure>
     <figure class="small-12 large-3 columns">
-      <a href="https://www.seti.pr.gov.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/seti.png"></a>
+      <a href="https://www.seti.pr.gov.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/seti.png"></a>
     </figure>
 	<figure class="small-12 large-3 columns">
-      <a href="http://www.ctc.uem.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/ctc.png"></a>
+      <a href="http://www.ctc.uem.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/ctc.png"></a>
     </figure>
   </div>
 
