--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -12,7 +12,7 @@
   
   <div id="apoio" class="row">
   <h2> Apoio </h2>
-	
+	  
     <figure class="small-12 large-3 columns">
       <a href="https://www.fappr.pr.gov.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/fundacao_araucaria.png"></a>
     </figure>
@@ -43,6 +43,8 @@
 
   <div id="patrocinio-prata" class="row">
     <h2> Patrocínio </h2>
+	
+	<figure class="small-12 large-3 columns"></figure>
 <!--
     <center>
 	    <figure class="small-12 large-3 columns"></figure>
