--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,7 +2,7 @@
     <h2> Realização </h2>
 	
     <figure class="small-12 large-3 columns">
-      <a href="https://www.uem.br" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/logoUEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
+      <a href="https://www.uem.br" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/UEM.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
     </figure>
     <figure class="small-12 large-3 columns">
       <a href="http://www.din.uem.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
