--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -22,6 +22,7 @@
 	<figure class="small-12 large-3 columns">
       <a href="http://www.ctc.uem.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/ctc.png"></a>
     </figure>
+	<figure class="small-12 large-3 columns"></figure>
   </div>
 
  <!-- <div id="patrocinio-ouro" class="row">
