--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -47,7 +47,7 @@
     <h2> Patrocínio </h2>
 	
 	<figure class="small-12 large-3 columns"></figure>
-<!--
+
     <center>
 	    <figure class="small-12 large-3 columns"></figure>
 	<figure class="small-12 large-3 columns">
@@ -55,7 +55,17 @@
     	</figure>
 	    <figure class="small-12 large-3 columns"></figure>
 	  </center>
--->
+
+		<figure class="small-12 large-3 columns"></figure>
+
+    <center>
+	    <figure class="small-12 large-3 columns"></figure>
+	<figure class="small-12 large-3 columns">
+      	<a href="https://tecnospeed.com.br/"><img src="https://eres-sbc-br.github.io/eres2022/images/tecnospeed.jpeg"></a>
+    	</figure>
+	    <figure class="small-12 large-3 columns"></figure>
+	  </center>
+
   </div>
 <!--
   <div id="patrocinio-bronze" class="row">
