--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -51,7 +51,7 @@
     <center>
 	    <figure class="small-12 large-3 columns"></figure>
 	<figure class="small-12 large-3 columns">
-      	<a href="https://www.softwarebymaringa.com.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/maringa.png" alt="Logo da Software by Maringá"></a>
+      	<a href="https://www.softwarebymaringa.com.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/maringa.png" alt="Logo da Software by Maringá"></a>
     	</figure>
 	    <figure class="small-12 large-3 columns"></figure>
 	  </center>
@@ -61,7 +61,7 @@
     <center>
 	    <figure class="small-12 large-3 columns"></figure>
 	<figure class="small-12 large-3 columns">
-      	<a href="https://tecnospeed.com.br/"><img src="https://eres-sbc-br.github.io/eres2023/images/tecnospeed.jpeg"></a>
+      	<a href="https://tecnospeed.com.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/tecnospeed.jpeg"></a>
     	</figure>
 	    <figure class="small-12 large-3 columns"></figure>
 	  </center>
