--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -37,6 +37,8 @@
 	<figure class="small-12 large-3 columns">
       	<a href="https://tecnospeed.com.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2023/images/tecnospeed.jpeg"></a>
     </figure>
+	<figure class="small-12 large-3 columns"></figure>
+	<figure class="small-12 large-3 columns"></figure>
 	
   </div>
 
