refactor: remove footer banners and hidden pages

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,5 +1,5 @@
 <hr>
-  <div id="realizacao" class="row">
+  <!-- <div id="realizacao" class="row">
     <h2> Realização </h2>
 	
     <figure class="small-12 large-3 columns">
@@ -9,43 +9,7 @@
       <a href="http://www.din.uem.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
     </figure>
 	 <figure class="small-12 large-3 columns"></figure>
-  </div>
-  
-  <div id="apoio" class="row">
-  <h2> Apoio </h2>
-	  
-    <figure class="small-12 large-3 columns">
-      <a href="https://www.fappr.pr.gov.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/fundacao_araucaria.png"></a>
-    </figure>
-    <figure class="small-12 large-3 columns">
-      <a href="https://www.seti.pr.gov.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/seti.png"></a>
-    </figure>
-	<figure class="small-12 large-3 columns">
-      <a href="http://www.ctc.uem.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/ctc.png"></a>
-    </figure>
-	<figure class="small-12 large-3 columns"></figure>
-  </div>
-
- 
-  <div id="patrocinio-prata" class="row">
-    <h2> Patrocínio </h2>
-	
-	<figure class="small-12 large-3 columns"> 
-      	<a href="https://www.softwarebymaringa.com.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/maringa.png" alt="Logo da Software by Maringá"></a>
-    </figure>
-	
-	<figure class="small-12 large-3 columns">
-      	<a href="https://tecnospeed.com.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/tecnospeed.jpeg"></a>
-    </figure>
-	
-	<figure class="small-12 large-3 columns">
-      	<a href="https://www.mentorstec.com.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/mentors.png"></a>
-    </figure>
-	
-	<figure class="small-12 large-3 columns"></figure>
-	
-  </div>
-
+  </div> -->
 
     <footer id="footer-content" class="bg-grau">
       <div id="footer">
