refactor: upload new logo and change header image

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -3,10 +3,10 @@
     <h2> Realização </h2>
 	
     <figure class="small-12 large-3 columns">
-      <a href="https://www.uem.br" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/uem.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
+      <a href="https://www.uem.br" target="_blank"><img src="{{ site.urlimg }}/uem.png" alt="Logo da Universidade Estatual de Maringá (UEM)"></a>
     </figure>
     <figure class="small-12 large-3 columns">
-      <a href="http://www.din.uem.br/" target="_blank"><img src="https://eres-sbc-br.github.io/eres2024/images/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
+      <a href="http://www.din.uem.br/" target="_blank"><img src="{{ site.urlimg }}/logoDIN.jpg" alt="Logo Departamento de Informática UEM  (DIN)"></a>
     </figure>
 	 <figure class="small-12 large-3 columns"></figure>
   </div> -->
