refactor: remove /inscricoes/ page content and styles refactor

--- a/_includes/_masthead.html
+++ b/_includes/_masthead.html
@@ -49,7 +49,7 @@ if page.header.caption_url && page.header.caption %}
         src="{{ site.urlimg }}/ERES-2024_Logo.svg"
         alt="ERES - 2024"
         width="140%"
-        style="height: auto; display: block; margin: 0 auto; padding: 2rem 0"
+        style="height: auto; display: block; margin: 0 auto; padding: 10px"
       />
     </figure>
   </div>
