feat: add footer logos

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,7 +1,13 @@
 <hr>
 
 <div id="realizacao" style="text-align: center; margin-bottom: 2rem;" class="row">
-  <h4>Organização: URI e UNIPAMPA</h4>
+  <h4>Organização</h4>
+  <a href="http://www.urisantiago.br/">
+    <img src="{{ site.urlimg }}/logo-uri.png" width="180px" height="90px" alt="Logo da URI">
+  </a>
+  <a href="https://unipampa.edu.br/portal/">
+    <img src="{{ site.urlimg }}/logo-unipampa.jpg" width="180px" height="90px" alt="Logo da UNIPAMPA">
+  </a>
   <h4 style="margin-top: 0">Apoio: em breve...</h4>
 </div>
 
