refactor: add target blank to the links

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,10 +2,10 @@
 
 <div id="realizacao" style="text-align: center; margin-bottom: 2rem;" class="row">
   <h4>Organização</h4>
-  <a href="http://www.urisantiago.br/">
+  <a href="http://www.urisantiago.br/" target="_blank">
     <img src="{{ site.urlimg }}/logo-uri.png" width="180px" height="90px" alt="Logo da URI">
   </a>
-  <a href="https://unipampa.edu.br/portal/">
+  <a href="https://unipampa.edu.br/portal/" target="_blank">
     <img src="{{ site.urlimg }}/logo-unipampa.jpg" width="180px" height="90px" alt="Logo da UNIPAMPA">
   </a>
   <h4 style="margin-top: 0">Apoio: em breve...</h4>
