--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -5,7 +5,6 @@
     align-items: flex-start;
     flex-wrap: wrap;
     text-align: center;
-    margin-bottom: 2rem;
   }
 
   .title {
@@ -19,7 +18,6 @@
     margin: 1rem;
   }
 
-  
   .logo {
     width: 100%;
     height: auto;
@@ -31,7 +29,7 @@
     transform: scale(1.05);
   }
 
-  
+
   @media (max-width: 768px) {
     #achievements {
       flex-direction: column;
@@ -46,7 +44,7 @@
       width: 50%;
     }
   }
-  
+
   .column.sponsorship {
     display: flex;
     flex-direction: column;
@@ -54,26 +52,51 @@
   }
 
   .sponsorship-images {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
     margin-top: 20px;
   }
 
-  .sponsorship-images a img {
-    width: 200px; 
-    height: auto;
+  .sponsorship-images {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    margin-top: 20px;
   }
-  
-  .organization img, 
+
+  .sponsorship-images a:nth-child(3) {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+
+  .sponsorship-images a:nth-child(1) img,
+  .sponsorship-images a:nth-child(2) img {
+    width: 350px;
+    margin-top: -0.5rem;
+  }
+
+  .sponsorship-images a:nth-child(3) img {
+    width: 110px;
+  }
+
+  .organization img,
   .support img {
-    max-width: 70%;
+    margin-top: 1rem;
+    max-width: 50%;
   }
-  
+
+  .organization img {
+    margin-top: 2rem;
+  }
+
+  .support img {
+    margin-top: -0.5rem;
+  }
+
   .sponsorship {
     width: 100%;
-    max-width: 800px; 
+    max-width: 800px;
   }
 </style>
 
@@ -81,7 +104,7 @@
 
 <div id="achievements" class="row">
   <div class="column organization">
-    <h4 class="title">Organization</h4>
+    <h4 class="title">Organização</h4>
     <a href="http://www.urisantiago.br/" target="_blank">
       <img src="{{ site.urlimg }}/logo-uri.png" alt="URI Logo" class="logo">
     </a>
@@ -91,14 +114,14 @@
   </div>
 
   <div class="column support">
-    <h4 class="title">Support</h4>
+    <h4 class="title">Apoio</h4>
     <a href="https://fapergs.rs.gov.br/inicial" target="_blank">
       <img src="{{ site.urlimg }}/patrocinadores/logo_fap.jpg" alt="FAPERGS Logo" class="logo">
     </a>
   </div>
 
   <div class="column sponsorship">
-    <h4 class="title">Sponsorship</h4>
+    <h4 class="title">Patrocínio</h4>
     <div class="sponsorship-images">
       <a href="http://www.santiago.rs.gov.br/" target="_blank">
         <img src="{{ site.urlimg }}/patrocinadores/logo_hub.jpg" alt="Hub Logo" class="logo">
@@ -125,32 +148,36 @@
 
       <div class="small-6 medium-3 large-3 large-offset-1 columns">
         {% for service_item in site.data.services %}
-          {% if forloop.first == true %}
-            <h5 class="shadow-black">{{ service_item.menu_name }}</h5>
-          {% endif %}
+        {% if forloop.first == true %}
+        <h5 class="shadow-black">{{ service_item.menu_name }}</h5>
+        {% endif %}
         {% endfor %}
         <ul class="no-bullet shadow-black">
           {% for service_item in site.data.services %}
-            {% if service_item.url contains 'http' %}{% assign domain = '' %}{% else %}{% capture domain %}{{ site.url }}{{ site.baseurl }}{% endcapture %}{% endif %}
-            <li {% if service_item.class %}class="{{ service_item.class }}" {% endif %}>
-              <a href="{{ domain }}{{ service_item.url }}" {% if service_item.url contains 'http' %}target="_blank" {% endif %} title="{{ service_item.title }}">{{ service_item.name }}</a>
-            </li>
+          {% if service_item.url contains 'http' %}{% assign domain = '' %}{% else %}{% capture domain %}{{ site.url
+          }}{{ site.baseurl }}{% endcapture %}{% endif %}
+          <li {% if service_item.class %}class="{{ service_item.class }}" {% endif %}>
+            <a href="{{ domain }}{{ service_item.url }}" {% if service_item.url contains 'http' %}target="_blank" {%
+              endif %} title="{{ service_item.title }}">{{ service_item.name }}</a>
+          </li>
           {% endfor %}
         </ul>
       </div>
 
       <div class="small-6 medium-3 large-3 columns">
         {% for network_item in site.data.network %}
-          {% if forloop.first == true %}
-            <h5 class="shadow-black">{{ network_item.menu_name }}</h5>
-          {% endif %}
+        {% if forloop.first == true %}
+        <h5 class="shadow-black">{{ network_item.menu_name }}</h5>
+        {% endif %}
         {% endfor %}
         <ul class="no-bullet shadow-black">
           {% for network_item in site.data.network %}
-            {% if network_item.url contains 'http' %}{% assign domain = '' %}{% else %}{% capture domain %}{{ site.url }}{{ site.baseurl }}{% endcapture %}{% endif %}
-            <li {% if network_item.class %}class="{{ network_item.class }}" {% endif %}>
-              <a href="{{ domain }}{{ network_item.url }}" {% if network_item.url contains 'http' %}target="_blank" {% endif %} title="{{ network_item.title }}">{{ network_item.name }}</a>
-            </li>
+          {% if network_item.url contains 'http' %}{% assign domain = '' %}{% else %}{% capture domain %}{{ site.url
+          }}{{ site.baseurl }}{% endcapture %}{% endif %}
+          <li {% if network_item.class %}class="{{ network_item.class }}" {% endif %}>
+            <a href="{{ domain }}{{ network_item.url }}" {% if network_item.url contains 'http' %}target="_blank" {%
+              endif %} title="{{ network_item.title }}">{{ network_item.name }}</a>
+          </li>
           {% endfor %}
         </ul>
       </div>
@@ -165,7 +192,8 @@
       <section id="subfooter-right" class="small-12 medium-6 columns">
         <ul class="inline-list social-icons">
           {% for social_item in site.data.socialmedia %}
-            <li><a href="{{ social_item.url }}" target="_blank" class="{{ social_item.class }}" title="{{ social_item.title }}"></a></li>
+          <li><a href="{{ social_item.url }}" target="_blank" class="{{ social_item.class }}"
+              title="{{ social_item.title }}"></a></li>
           {% endfor %}
         </ul>
       </section>
